[package]
name = "bevy_asset_maker"
version = "0.1.0"
edition = "2021"
description = "Crate for defining content as assets"
license = "MIT or Apache 2.0"
keywords = ["bevy", "asset"]
categories = ["game-development"]

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.1",default-features = false, features = ["bevy_asset"]}
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }

[features]
saver = []
default = []
